preview controller now will be none if there is nothing

--- a/assets/css/preview.css
+++ b/assets/css/preview.css
@@ -138,6 +138,13 @@ html[data-theme="light"] .ar-btn.active {
   transform: translateX(-50%);
   right: auto;
   z-index: 20;
+}
+
+.preview-controls:empty {
+  display: none !important;
+}
+
+.preview-controls {
 
   display: flex;
   flex-direction: row;
