some element size changed

--- a/assets/css/forms.css
+++ b/assets/css/forms.css
@@ -7,9 +7,10 @@ input[type="text"],
 input[type="number"],
 select {
   appearance: none;
-  height: 48px;
+  height: 40px;
   /* Compact height (MD3 default is 56px, comfortable is 48px) */
   padding: 0 16px;
+  line-height: inherit;
   font: var(--md-sys-typescale-body-large);
   color: var(--md-sys-color-on-surface);
   background: transparent;
